# devlog

./: CHANGELOG.txt  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: python-publish.yml  python-test.yml
devlog/: __init__.py  base.py  custom_excepthook.py  decorator.py  decorators.py  sanitize.py
test/: tests_generic.py
tests/: test_generic.py  tests_generic.py
