[build-system]
requires = ["setuptools>=42.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "python-devlog"
dynamic = ["version"]
description = "No more logging in your code business logic with decorators"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "めがねこ", email = "neko@meganeko.dev" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["clean code", "decorators", "logging"]

[project.urls]
Homepage = "https://github.com/MeGaNeKoS/devlog"

[tool.setuptools]
packages = ["devlog"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=devlog"
testpaths = [
    "tests",
]
